[package]
name = "tokio-cni"
version = "0.1.0"
edition = "2021"
description = "An async/Tokio implementation of a CNI runtime that adheres to the latest specification"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["fs", "process", "io-util"] }
async-trait = "0.1.81"
cidr = { version = "0.2.3", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
